# lilo

./: .gitignore  CMakeLists.txt  generate-iso.sh  lil_debug.sh  limine.cfg  linker.ld
libc/: stdlib.c  stdlib.h
src/drivers/: vga.c  vga.h
src/kernel/: gdt.c  gdt.h  idt.c  idt.h  isr.c  main.c  stivale.h  stivale2.h
src/util/: io.c  io.h
